--- a/minivmac/src/main/res/values/arrays.xml
+++ b/minivmac/src/main/res/values/arrays.xml
@@ -19,13 +19,19 @@
         <item>255</item>
     </string-array>
     <string-array name="kbd_entries">
+        <item>@string/prefs_kbd_gb</item>
         <item>@string/prefs_kbd_us</item>
-        <item>@string/prefs_kbd_es</item>
+        <item>@string/prefs_kbd_fr</item>
         <item>@string/prefs_kbd_he</item>
+        <item>@string/prefs_kbd_es</item>
+        <item>@string/prefs_kbd_es_iso</item>
     </string-array>
     <string-array name="kbd_values">
+        <item>gb</item>
         <item>us</item>
-        <item>es</item>
+        <item>fr</item>
         <item>he</item>
+        <item>es</item>
+        <item>es_iso</item>
     </string-array>
 </resources>
