--- a/minivmac/src/main/res/xml/es_iso_symbols_shift.xml
+++ b/minivmac/src/main/res/xml/es_iso_symbols_shift.xml
@@ -6,27 +6,26 @@
           android:keyHeight="@dimen/key_height"
     >
     <Row>
-        <Key android:codes="18" android:keyLabel="¡" android:keyEdgeFlags="left"/>
-        <Key android:codes="19" android:keyLabel="!"/>
-        <Key android:codes="20" android:keyLabel="#"/>
+        <Key android:codes="18" android:keyLabel="!" android:keyEdgeFlags="left"/>
+        <Key android:codes="19" android:keyLabel="&quot;"/>
+        <Key android:codes="20" android:keyLabel="·"/>
         <Key android:codes="21" android:keyLabel="$"/>
         <Key android:codes="23" android:keyLabel="%"/>
-        <Key android:codes="22" android:keyLabel="/"/>
-        <Key android:codes="26" android:keyLabel="&amp;"/>
-        <Key android:codes="28" android:keyLabel="*"/>
-        <Key android:codes="25" android:keyLabel="("/>
-        <Key android:codes="29" android:keyLabel=")" android:keyEdgeFlags="right"/>
+        <Key android:codes="22" android:keyLabel="&amp;"/>
+        <Key android:codes="26" android:keyLabel="/"/>
+        <Key android:codes="28" android:keyLabel="("/>
+        <Key android:codes="25" android:keyLabel=")"/>
+        <Key android:codes="29" android:keyLabel="=" android:keyEdgeFlags="right"/>
     </Row>
 
     <Row>
-        <Key android:codes="10" android:keyLabel="] }" android:keyEdgeFlags="left"/>
-        <Key android:codes="33" android:keyLabel="º"/>
-        <Key android:codes="30" android:keyLabel="¨"/>
-        <Key android:codes="39" android:keyLabel=":" android:horizontalGap="7.5%p"/>
-        <Key android:codes="42" android:keyLabel="&quot;"/>
-        <Key android:codes="62" android:keyLabel="↑" android:horizontalGap="7.5%p"/>
-        <Key android:codes="27" android:keyLabel="_" android:horizontalGap="5%p"/>
-        <Key android:codes="24" android:keyLabel="+" android:keyEdgeFlags="right"/>
+        <Key android:codes="10" android:keyLabel="ª" android:keyEdgeFlags="left"/>
+        <Key android:codes="33" android:keyLabel="^"/>
+        <Key android:codes="30" android:keyLabel="*"/>
+        <Key android:codes="39" android:keyLabel="¨" android:horizontalGap="7.5%p"/>
+        <Key android:codes="62" android:keyLabel="↑" android:horizontalGap="17.5%p"/>
+        <Key android:codes="27" android:keyLabel="\?" android:horizontalGap="5%p"/>
+        <Key android:codes="24" android:keyLabel="¿" android:keyEdgeFlags="right"/>
     </Row>
 
     <Row>
@@ -34,9 +33,9 @@
             android:keyWidth="10%p" android:isModifier="true"
             android:isSticky="true" android:keyEdgeFlags="left"/>
         <Key android:codes="50" android:keyLabel="&gt;"/>
-        <Key android:codes="43" android:keyLabel="¿"/>
-        <Key android:codes="47" android:keyLabel="\?"/>
-        <Key android:codes="44" android:keyLabel="Ç"/>
+        <Key android:codes="43" android:keyLabel=";"/>
+        <Key android:codes="47" android:keyLabel=":"/>
+        <Key android:codes="44" android:keyLabel="_"/>
         <Key android:codes="59" android:keyLabel="←" android:horizontalGap="5%p"/>
         <Key android:codes="61" android:keyLabel="↓"/>
         <Key android:codes="60" android:keyLabel="→"/>
