--- a/minivmac/src/main/res/xml/fr_qwerty.xml
+++ b/minivmac/src/main/res/xml/fr_qwerty.xml
@@ -6,8 +6,8 @@
     android:keyHeight="@dimen/key_height"
     >
     <Row>
-        <Key android:codes="12" android:keyLabel="q" android:keyEdgeFlags="left"/>
-        <Key android:codes="13" android:keyLabel="w"/>
+        <Key android:codes="12" android:keyLabel="a" android:keyEdgeFlags="left"/>
+        <Key android:codes="13" android:keyLabel="z"/>
         <Key android:codes="14" android:keyLabel="e"/>
         <Key android:codes="15" android:keyLabel="r"/>
         <Key android:codes="17" android:keyLabel="t"/>
@@ -19,7 +19,7 @@
     </Row>
 
     <Row>
-        <Key android:codes="0" android:keyLabel="a" android:keyEdgeFlags="left"/>
+        <Key android:codes="0" android:keyLabel="q" android:keyEdgeFlags="left"/>
         <Key android:codes="1" android:keyLabel="s"/>
         <Key android:codes="2" android:keyLabel="d"/>
         <Key android:codes="3" android:keyLabel="f"/>
@@ -28,23 +28,22 @@
         <Key android:codes="38" android:keyLabel="j"/>
         <Key android:codes="40" android:keyLabel="k"/>
         <Key android:codes="37" android:keyLabel="l"/>
-        <Key android:codes="41" android:keyLabel="ñ" android:keyEdgeFlags="right"/>
+        <Key android:codes="41" android:keyLabel="m" android:keyEdgeFlags="right"/>
     </Row>
 
     <Row>
         <Key android:codes="56" android:keyIcon="@drawable/kb_shift"
-            android:keyWidth="12.5%p" android:isModifier="true"
+            android:keyWidth="15%p" android:isModifier="true"
             android:isSticky="true" android:keyEdgeFlags="left"/>
-        <Key android:codes="6" android:keyLabel="z" android:horizontalGap="2.5%p"/>
+        <Key android:codes="6" android:keyLabel="w" android:horizontalGap="5%p"/>
         <Key android:codes="7" android:keyLabel="x"/>
         <Key android:codes="8" android:keyLabel="c"/>
         <Key android:codes="9" android:keyLabel="v"/>
         <Key android:codes="11" android:keyLabel="b"/>
         <Key android:codes="45" android:keyLabel="n"/>
-        <Key android:codes="46" android:keyLabel="m"/>
         <Key android:codes="51" android:keyIcon="@drawable/kb_backspace"
-            android:keyWidth="12.5%p" android:keyEdgeFlags="right"
-            android:horizontalGap="2.5%p" android:isRepeatable="true"/>
+            android:keyWidth="15%p" android:keyEdgeFlags="right"
+            android:horizontalGap="5%p" android:isRepeatable="true"/>
     </Row>
 
     <Row android:rowEdgeFlags="bottom">
