--- a/minivmac/src/main/res/xml/us_symbols_shift.xml
+++ b/minivmac/src/main/res/xml/us_symbols_shift.xml
@@ -55,7 +55,7 @@
              android:isSticky="true"/>
         <Key android:codes="49" android:keyIcon="@drawable/kb_spacebar"
              android:keyWidth="30%p" android:isRepeatable="true"/>
-        <Key android:codes="53" android:keyIcon="@drawable/sym_keyboard_esc"
+        <Key android:codes="-20" android:keyIcon="@drawable/kb_numpad"
              android:keyWidth="10%p"/>
         <Key android:codes="48" android:keyIcon="@drawable/kb_tab"
              android:keyWidth="10%p"/>
