--- a/minivmac/src/macII/res/values/arrays.xml
+++ b/minivmac/src/macII/res/values/arrays.xml
@@ -1,8 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string-array name="machine_entries">
-        <item>@string/pref_machine_mac128k</item>
         <item>@string/pref_machine_macPlus</item>
+        <item>@string/pref_machine_mac128k</item>
+        <item>@string/pref_machine_mac512ke</item>
+        <item>@string/pref_machine_macSE</item>
+        <item>@string/pref_machine_macClassic</item>
+        <item>@string/pref_machine_macSEFDHD</item>
         <item>@string/pref_machine_macII</item>
         <item>@string/pref_machine_macIIx</item>
         <item>@string/pref_machine_macII_1024</item>
@@ -11,8 +15,12 @@
         <item>@string/pref_machine_macIIx_512</item>
     </string-array>
     <string-array name="machine_values">
-        <item>libmnvmcore128.so</item>
         <item>libmnvmcoreplus.so</item>
+        <item>libmnvmcore128.so</item>
+        <item>libmnvmcore512.so</item>
+        <item>libmnvmcorese.so</item>
+        <item>libmnvmcoreclassic.so</item>
+        <item>libmnvmcoresefdhd.so</item>
         <item>libmnvmcoreii.so</item>
         <item>libmnvmcoreii.so</item>
         <item>libmnvmcoreii1024.so</item>
@@ -21,8 +29,16 @@
         <item>libmnvmcoreii512.so</item>
     </string-array>
     <string-array name="machine_rom_names">
+        <item>vMac.ROM</item>
         <item>Mac128K.ROM</item>
         <item>vMac.ROM</item>
+        <item>MacSE.ROM</item>
+        <item>Classic.ROM</item>
+        <item>SEFDHD.ROM</item>
+        <item>MacII.ROM</item>
+        <item>MacIIx.ROM</item>
+        <item>MacII.ROM</item>
+        <item>MacIIx.ROM</item>
         <item>MacII.ROM</item>
         <item>MacIIx.ROM</item>
     </string-array>
