--- a/minivmac/src/main/res/layout/screen.xml
+++ b/minivmac/src/main/res/layout/screen.xml
@@ -6,12 +6,37 @@
     android:layout_height="match_parent"
     android:background="#000000">
 
-    <name.osher.gil.minivmac.ScreenView
-        android:id="@+id/screen"
+    <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1"/>
+        android:layout_weight="1">
 
+        <!-- Screen and Touchscreen mouse -->
+        <name.osher.gil.minivmac.ScreenView
+            android:id="@+id/screen"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
+
+        <!-- Trackpad -->
+        <name.osher.gil.minivmac.TrackPadView
+            android:id="@+id/trackpad"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@android:color/transparent"
+            android:visibility="gone" />
+
+        <ImageButton
+            android:id="@+id/toggle_ui_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom|end"
+            android:background="@android:color/transparent"
+            android:src="@drawable/ic_fullscreen"
+            android:contentDescription="@string/toggle_system_ui"
+            android:visibility="gone" />
+    </FrameLayout>
+
+    <!-- Restart button -->
     <RelativeLayout
         android:id="@+id/restart_layout"
         android:layout_width="match_parent"
@@ -27,6 +52,7 @@
             android:layout_centerInParent="true" />
     </RelativeLayout>
 
+    <!-- Keyboard -->
     <android.inputmethodservice.KeyboardView
         android:id="@+id/keyboard"
         android:layout_width="wrap_content"
